@@ -176,3 +176,7 @@ Mon Apr 15 23:50:40 2002                        Michael Jennings (mej)
 
 A doubly-linked list implementation of the list interface.
 ----------------------------------------------------------------------
+Tue Apr 16 16:23:42 2002                        Michael Jennings (mej)
+
+Another obvious list implementation...an array.
+----------------------------------------------------------------------
